...
            "state": "translated",
            "value": "使用 Google 继续"
          }
        }
      }
    },
    "Copy Link": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "复制链接"
          }
...
            "state": "translated",
            "value": "封面图"
          }
        }
      }
    },
    "Create": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "发起"
          }
...
            "state": "translated",
            "value": "徒步步道"
          }
        }
      }
    },
    "Home": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "首页"
          }
...
            "state": "translated",
            "value": "宠物友好评分"
          }
        }
      }
    },
    "PetNote": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "PetNote"
          }
...
            "state": "translated",
            "value": "热门标签"
          }
        }
      }
    },
    "Post": {
      "comment": "Noun: a post with no picture, read by VoiceOver",
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "帖子"
...
            "state": "translated",
            "value": "隐私政策"
          }
        }
      }
    },
    "Profile": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "个人主页"
          }
...
